--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </h1>
         <nav>
             <ul>
-                <li class="current-page"><a href="#">Mi App</a></li>
-                <li><a href="/add-city.html">Ciudad</a></li>
+                <li class="current-page"><a href="#">Clima</a></li>
+                <li><a href="/add-city.html">Agregar ciudad</a></li>
                 <li><a href="/help.html">Ayuda</a></li>
             </ul>
         </nav>
