--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </h1>
         <nav>
             <ul>
-                <li class="current-page"><a href="#">Clima</a></li>
+                <li class="current-page"><a href="/index.html">Clima</a></li>
                 <li><a href="/add-city.html">Agregar ciudad</a></li>
                 <li><a href="/help.html">Ayuda</a></li>
             </ul>
@@ -25,12 +25,32 @@
     </header>
     <!-- Contenido principal de la página -->
     <main>
-        <h2>Mi primera App!</h2>
+        <h2>El Clima Ahora</h2>
         <section id="form-city-list">
             <!-- Sección donde se debe colocar el formulario, con el select y el botón de consultar -->
+            <form action="">
+                
+                <select name="Selecionable" id="Selecionable">
+                    <option value="Selecionar Ciudad" disabled - selected>Selecionar Ciudad</option>
+                    <option value="Rosario">Rosario</option>
+                    <option value="Rafaela">Rafaela</option>
+                </select>
+                <button>Consulta</button>
+
+
+            </form>
         </section>
         <section id="section-weather-result">
             <!-- Sección donde se debe mostrar el clima de la ciudad -->
+            <div class="card" id="card">
+                <h3>Rosario</h3>
+                   <img src="/css/img/circulo.png" alt="">
+                   <p>Temperatura: 25.31°</p>
+                   <p>Sencacion Termica: 24.65°</p>
+                   <p>Humedad: 29%</p>
+                   <p>Velocidad del viento: 4.63km/h</p>
+                   <p>Precion: 1011P</p>
+            </div>
         </section>
     </main>
     <footer>
