--- a/add-city.html
+++ b/add-city.html
@@ -26,8 +26,13 @@
     <!-- Contenido principal de la página -->
     <main>
         <h2>Agregar Ciudad</h2>
-        <section id="form-city-list">
+        <section id="section-city">
             <!-- Sección donde se debe colocar el formulario, con el select y el botón de consultar -->
+            <form action="">
+                <label for="Texto">Ingrese la ciudad a agregar:</label>
+                <input type="text" name="ciudad" id="ciudad"><br>
+                <button>Agregar</button>
+            </form>
         </section>
         
     </main>
