--- a/help.html
+++ b/help.html
@@ -26,7 +26,21 @@
     <!-- Contenido principal de la página -->
     <main>
         <h2>Ayudar clima App v.1.0</h2>
-        <section id="form-city-list">
+        <p> <center>Esta App te permite consultar el clima de una ciudad
+                    en particular utilizando la API de <a
+                href="https://openweathermap.org/api" 
+                target="_blank">OpenWeatherMap
+            </center>
+            </a>
+        </p><br>
+
+
+        <p> <center>Para poder consultar el clima, 
+            primera debera <a href="add-city.html">Agregar una ciudad</a> y luego 
+            selecionar la Ciudad en cuestion desde la pagina <a href="index.html">Clima</a> 
+            </center>
+        </p>
+        <section id="section-help">
             <!-- Sección donde se debe colocar el formulario, con el select y el botón de consultar -->
         </section>
         
