--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1>
-            <span>Clima App</span>
+            <img src="/css/img/dom.png"><span>Clima App</span>
         </h1>
         <nav>
             <ul>
