--- a/help.html
+++ b/help.html
@@ -23,38 +23,28 @@
             </ul>
         </nav>
     </header>
-    <!-- Contenido principal de la página -->
     <main>
         <h2>Ayudar clima App v.1.0</h2>
 
-        <!-- PREGUNTAR ALINEADO -->
-        <p> <center>Esta App te permite consultar el clima de una ciudad
-                    en particular utilizando la API de <a
-                href="https://openweathermap.org/api" 
-                target="_blank">OpenWeatherMap</center>
-            </a>
-         <!-- PREGUNTAR ALINEADO -->
-        </p><br>
-         <!-- PREGUNTAR ALINEADO -->
-         <!-- PREGUNTAR ALINEADO -->
-        <p> <center>Para poder consultar el clima, 
+
+        <p> Esta App te permite consultar el clima de una ciudad en particular utilizando la API de 
+            <a href="https://openweathermap.org/api"  target="_blank">OpenWeatherMap </a>
+            <br>
+            Para poder consultar el clima, 
             primera debera <a href="add-city.html">Agregar una ciudad</a> y luego 
             selecionar la Ciudad en cuestion desde la pagina <a href="index.html">Clima</a> 
-         <!-- PREGUNTAR ALINEADO -->
+            <center>
             <form action="">
                 Nombre:<input type="text"><br>
                 Email:<input type="email"><br>
                 Mensaje: <textarea cols="30" rows="10"></textarea><br>
                 <button>limpiar</button>
                 <button>Enviar</button>
-            
-        <!-- PREGUNTAR ALINEADO -->
-        <!-- PREGUNTAR ALINEADO -->
+
             </form>
-        </center>
+            </center>
         </p>
         <section id="section-help">
-            <!-- Sección donde se debe colocar el formulario, con el select y el botón de consultar -->
         </section>
         
     </main>
