--- a/help.html
+++ b/help.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1>
-            <span>Clima App</span>
+            <img src="/css/img/dom.png"><span>Clima App</span>
         </h1>
         <nav>
             <ul>
@@ -35,10 +35,13 @@
             selecionar la Ciudad en cuestion desde la pagina <a href="index.html">Clima</a> 
             <center>
             <form action="">
-                Nombre:<input type="text"><br>
-                Email:<input type="email"><br>
-                Mensaje: <textarea cols="30" rows="10"></textarea><br>
-                <button>limpiar</button>
+                Nombre:<br>
+                <input type="text" class="Ayuda"><br>
+                Email:<br>
+                <input type="email" class="Ayuda"><br>
+                Mensaje:<br>
+                <textarea cols="30" rows="10" class="Ayuda"></textarea><br>
+                <button>Limpiar</button>
                 <button>Enviar</button>
 
             </form>
@@ -46,7 +49,12 @@
         </p>
         <section id="section-help">
         </section>
-        
+        <br>
+        <div class="opciones">
+            <center>
+            <p style="background-color: red;">Ingrese un <b>Email</b> valido</p>
+            </center>
+        </div>
     </main>
     <footer>
         <p>
